--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -1,3 +1,7 @@
+:root{
+    --linkHover: orangered;
+}
+
 .content{
     margin: 0;
     padding: 0;
@@ -16,3 +20,133 @@
     text-decoration: none;
     color: #000
 }
+
+.content .content__sidebar a i{
+    width:30px;
+    text-align: center;
+    padding-right: 10px;
+}
+
+.content .content__sidebar a:hover{
+    color: var(--linkHover);
+    border-left: 3px solid var(--linkHover);
+}
+
+/* -------general box --------- */
+
+.box{
+    height: 200px;
+    width: 280px;
+    position: relative;
+    overflow: hidden;
+    padding: 4px;
+    box-shadow: 0 0 5px #333;
+    margin-right: 10px;
+}
+
+.box img{
+    height:100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.box .box-content{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: translateY(-100%);
+    transition: 0.3s linear;
+}
+
+.box:hover .box-content{
+    transform: translateY(0);
+}
+
+.linkBtn{
+    text-decoration: none;
+    color: var(--linkHover);
+    padding: 6px 16px;
+    border: 1px solid var(--linkHover);
+    border-radius: 4px;
+    position: relative;
+    z-index: 0;
+}
+
+.linkBtn::before{
+    height: 100%;
+    width: 0;
+    background-color: var(--linkHover);
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: 0.3s linear;
+    z-index: -1;
+}
+
+.linkBtn:hover::before{
+    height: 100%;
+    width: 100%;
+    left: 0;
+}
+
+.linkBtn:hover{
+    color: #fff;
+}
+
+
+
+/* -------list food items--------- */
+
+.listFoodItem{
+    position: relative;
+}
+
+.listFoodItem .listFoodItem__btn .btn-next{
+    position: absolute;
+    top: 25%;
+    transform: translateY(50%);
+    right: 0;
+}
+
+.listFoodItem .listFoodItem__btn .btn-prev{
+    position: absolute;
+    top: 25%;
+    transform: translateY(50%);
+    left: 0;
+}
+
+.listFoodItem .listFoodItem__btn button{
+    border: none;
+    background: none;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.listFoodItem .listFoodItem__btn button:hover{
+    background: #fff;
+}
+
+/* --------------home-------------- */
+
+@keyframes homeImg{
+    0%, 100% { transform: translateY(0)}
+    50% { transform: translateY(40px)}
+}
+
+.homeImg{
+    position: relative;
+    animation: homeImg 1.5s linear infinite;
+}
+
+
+
+
+
+
