--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -1,5 +1,5 @@
 :root{
-    --linkHover: orangered;
+    --linkHover: darkorange;
 }
 
 .content{
@@ -60,6 +60,22 @@
     background-color: rgba(255, 255, 255, 0.8);
     transform: translateY(-100%);
     transition: 0.3s linear;
+}
+
+.box .box-content h3{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.box .box-content p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .box:hover .box-content{
