--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -184,5 +184,63 @@
     -webkit-box-orient: vertical; 
 }
 
+/* ----comment----- */
+
+.comment{
+    display: flex;
+    margin-bottom: 15px;
+
+}
+
+.comment .userComment{
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.comment .userComment .userComment-img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.comment .content--comment{
+    padding: 10px;
+    background-color: #f2f3f5;
+    border-radius: 15px;
+}
+
+/* ---form comment----- */
+
+
+.form-comment{
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.form-comment .form-comment__imgUser{
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.form-comment .form {
+    flex-grow: 1;
+}
+
+.form-comment .form .form__inputComment{
+    display: block;
+    height: 40px;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    margin-bottom: 10px;
+}
+
+
 
 
